# Copyright 2013 YuGiOhJCJ
#
# This file is part of Netgens.
#
# Netgens is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Netgens is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Netgens.  If not, see <http://www.gnu.org/licenses/>.
AUTOMAKE_OPTIONS = foreign
SUBDIRS = src pixmaps
maintainer-clean-local:
	rm -rfv aclocal.m4
	rm -rfv acsite.m4
	rm -rfv autom4te.cache
	rm -rfv config.cache
	rm -rfv config.h
	rm -rfv config.h.in
	rm -rfv config.log
	rm -rfv config.status
	rm -rfv configure
	rm -rfv configure.scan
	rm -rfv `find . -name "Makefile.in"`
	rm -rfv `find . -name "Makefile"`
	rm -rfv ansi2knr.c
	rm -rfv ansi2knr.1
	rm -rfv compile
	rm -rfv config.guess
	rm -rfv config.sub
	rm -rfv config-ml.in
	rm -rfv depcomp
	rm -rfv elisp-comp
	rm -rfv install-sh
	rm -rfv mdate-sh
	rm -rfv missing
	rm -rfv mkinstalldirs
	rm -rfv py-compile
	rm -rfv symlink-tree
	rm -rfv texinfo.tex
	rm -rfv ylwrap
